--- a/committee.tex
+++ b/committee.tex
@@ -220,13 +220,9 @@ Notice that there is a crucial difference between comparing the cases and compar
 
 \section{Deriving the non-matching type}\label{sec:deriving-nonmatching}
 
-The non-matching type of language allows for matching cases, it allows the internal case to win, and it allows the external case to win. I have been describing Old High German as an example of the non-matching type. In this section, I describe what it is about Old High German that causes the language to be of this type.
+The non-matching type of language allows for matching cases, it allows the internal case to win, and it allows the external case to win. I have been describing Old High German as an example of this type. In this section, I show what it is about Old High German that causes the language to be of the non-matching type. I propose that the crucial factor is that Old High German has a syncretic internal and external base. Since they are syncretic, the features in the internal base contain the features in the external base, and the features in the external base contain just as well the features in the internal base. The internal base containing the external base causes the internal case to be allowed to surface when it wins the case competition. The external base containing the internal base causes the external case to be allowed to surface when it wins the case competition.
 
-I propose that the crucial factor is that Old High German has a syncretic internal and external base. Since they are syncretic, the features in the internal base contain the features in the external base, and the features in the external base contain just as well the features in the internal base. The internal base containing the external base causes that the internal case is allowed to surface when it wins the case competition. The external base containing the internal base causes the external case is allowed to surface when it wins the case competition.
-
-This section is structured as follows. First, I argue that Old High German headless relatives are derived from relative clauses headed by a demonstrative, i.e. light-headed relatives. In this analysis, the internal element is the relative pronoun, and the external element is the demonstrative. Then I show the syntactic structure within the internal and external element. This allows me to show that the internal and external element consist of two parts: the base part and the case part.
-
-I go through all examples in Table \ref{tbl:forms-ohg}.
+This section is structured as follows. First, I argue that Old High German headless relatives are derived from relative clauses headed by a demonstrative, i.e. light-headed relatives. In this analysis, the internal element is the relative pronoun, and the external element is the demonstrative. That means that in headless relatives with a more complex external case, it is actually the external demonstrative that surface as what we see as the relative pronoun. I decompose the internal and external element, and I show which morpheme corresponds to which features. The elements consist of two morphemes: a base part and a case part. I go through the examples in Table \ref{tbl:forms-ohg}, showing per situation how the base and case parts syntactically contain the other base and case parts.
 
 \begin{table}[H]
   \center
@@ -245,68 +241,154 @@ I go through all examples in Table \ref{tbl:forms-ohg}.
 \label{tbl:forms-ohg}
 \end{table}
 
-I propose headless relatives are derived from light-headed relatives. Internal element is relative pronoun, external element is demonstrative. Fuß: d-pronouns introduce individuating headless relatives.
+I propose headless relatives are derived from relative clauses that have demonstratives as a head, i.e. light-headed relatives (\citealt{fuss2014} argue the same, but then for Modern German, \citealt{hanink2018} argues for non-pronounciation.\footnote{
+In Modern German, the deletion of one of the elements is only possible when the cases match. In Section \ref{ch:discussion} I return to the point why Modern German does not have non-matching headless relatives that look like Old High German, although it still has syncretic relative pronouns and a demonstratives.
+}).
+In a light-headed relative, the head of a relative is not a full noun phrase, but it is a bit lighter: it only contains a demonstrative. Consider the light-headed relative in \ref{ex:ohg-double}. \tit{Thér} `\tsc{dem}.\tsc{sg}.\tsc{m}.\tsc{nom}' is the head of the relative clause, which is the external element. \tit{Then} `\tsc{rel}.\tsc{sg}.\tsc{m}.\tsc{acc}' is the relative pronoun of the relative clause, which is the internal element.
 
 \exg. eno nist thiz thér then ir suochet zi arslahanne?\\
  now {not be.3\ac{sg}} \tsc{dem}.\tsc{sg}.\tsc{n}.\tsc{nom} \tsc{dem}.\tsc{sg}.\tsc{m}.\tsc{nom}
  \tsc{rel}.\tsc{sg}.\tsc{m}.\tsc{acc} 2\ac{pl}.\tsc{nom} seek.2\tsc{pl} to kill.\tsc{inf}.\ac{sg}.\tsc{dat}\\
- `Isn't this now the one, who you seek to kill?'
+ `Isn't this now the one, who you seek to kill?'\label{ex:ohg-double}
 
+The difference between a light-headed relative and a headless relative is that in headless relatives, either the internal or the external is absent. The absent element is the one that has the least complex case. This brings me to the topic of optionality. In Old High German, the internal and external element can both surface, only the internal element can surface and only the external element can surface. If only one of the two elements surfaces, it is decided by whichever bears the most complex case. I assume that whether both or only one of the elements surfaces is determined by information structure. In \ref{ex:ohg-double}, the external element \tit{thér} `\tsc{dem}.\tsc{sg}.\tsc{m}.\tsc{nom}' is the candidate to be absent. However, it seems plausible that this is emphasized in this sentence and that is, therefore, not deleted. This sharply contrasts with headless relatives in Modern German, which are always ungrammatical when both the internal and external elements surface.
 
+Support from the analysis that the Old High German headless relatives are derived from headed ones is their specific interpretation. \ref{ex:ohg-nom-acc-interpretation} is likely to mean `the single specific person whom they talk about' and not so much `whoever they talk about'.
 
-
-
-
-
-\exg. quham dher chisendit scolda uuerdhan\\
- come.\ac{pst}.3\ac{sg}\scsub{[nom]} \ac{rel}.\ac{sg}.\ac{m}.\ac{nom} send.\ac{pst}.\ac{ptcp}\scsub{[nom]} should.\ac{pst}.3\ac{sg} become.\ac{inf}\\
- `the one, who should have been sent, came' \flushfill{Old High German, \ac{isid} 35:5}\label{ex:ohg-nom-nom-rep2}
-
-
+(does Helmut also not say this?)
 
 \exg. Thíz ist \tbf{then} \tbf{sie} \tbf{zéllent}\\
- \ac{dem}.\ac{sg}.\ac{n}.\ac{nom} be.\ac{pres}.3\ac{sg}\scsub{[nom]} \ac{rel}.\ac{sg}.\ac{m}.\ac{acc} 3\ac{pl}.\ac{m}.\ac{nom} tell.\ac{pres}.3\ac{pl}\scsub{[acc]}\\
- `this is the one whom they talk about' \flushfill{Old High German, \ac{otfrid} III 16:50}\label{ex:ohg-nom-acc-rep}
+\ac{dem}.\ac{sg}.\ac{n}.\ac{nom} be.\ac{pres}.3\ac{sg}\scsub{[nom]} \ac{rel}.\ac{sg}.\ac{m}.\ac{acc}
+3\ac{pl}.\ac{m}.\ac{nom} tell.\ac{pres}.3\ac{pl}\scsub{[acc]}\\
+`this is the one whom they talk about'\\
+not: `this is whoever they talk about' \flushfill{Old High German, \ac{otfrid} III 16:50}\label{ex:ohg-nom-acc-interpretation}
 
-\exg. ih bibringu fona iacobes samin endi fona iuda dhen \tbf{mina} \tbf{berga} \tbf{chisitzit}\\
- 1\ac{sg}.\ac{nom} {create}.\ac{pres}.1\ac{sg}\scsub{[acc]} of Jakob.\ac{gen} seed.\ac{sg}.\ac{dat} and of Judah.\ac{dat}
-\ac{rel}.\ac{sg}.\ac{m}.\ac{acc} my.\ac{acc}.\ac{m}.\ac{pl} mountain.\ac{acc}.\ac{pl} possess.\ac{pres}.3\ac{sg}\scsub{[nom]}\\
- `I create of the seed of Jacob and of Judah the one, who possess my mountains' \flushfill{Old High German, \ac{isid} 34:3}\label{ex:ohg-acc-nom-rep}
+Another example is:
 
-I show the internal structure of the internal and external element, so the relative pronoun and the demonstrative pronoun. The two forms under discussion in this section are the masculine singular nominative and masculine singular accusative. The pronouns consist of two morphemes: \tit{de} and suffix that differs per number, gender and case.\footnote{
-\tit{d} can also be written as \tit{dh} and \tit{th}, \tit{ë} can also be \tit{e} and \tit{é}.
+\exg. enti aer {ant uurta} demo \tbf{zaimo} \tbf{sprah}\\
+and 3\ac{sg}.\ac{m}.\ac{nom} reply.\ac{pst}.3\ac{sg}\scsub{[dat]} \ac{rel}.\ac{sg}.\ac{m}.\ac{dat} {to 3\ac{sg}.\ac{m}.\ac{dat}} speak.\ac{pst}.3\ac{sg}\scsub{[nom]}\\
+`and he replied to the one who spoke to him'\\
+not: `and he replied to whoever spoke to him'
+ \flushfill{Old High German, \ac{mons} 7:24, adapted from \pgcitealt{pittner1995}{199}}\label{ex:ohg-dat-nom-rep}
+
+So, the internal element in Old High German is the relative pronoun, and the external element in Old High German is the demonstrative. Let us now take a closer look at the internal structure of the internal and external element. I illustrate how the internal base and the external base are identical, so they contain each other.
+
+The pronouns consist of two morphemes: \tit{d} and suffix that differs per number, gender and case.\footnote{
+\tit{d} can also be written as \tit{dh} and \tit{th}, \tit{ë} and \tit{ē} can also be \tit{e} and \tit{é}.
 }
+The two forms under discussion in this section are the masculine singular nominative and masculine singular accusative, marked gray in Table \ref{tbl:rel-dem-ohg}.
 
-give whole paradigm here, show which morphemes these pronouns consist of. Highlight the two forms I talk about it, and say I simplify it.
-
-\begin{table}[H]\label{tbl:paradigmohg}
+\begin{table}[H]\label{tbl:rel-dem-ohg}
  \center
- \caption {Relative pronouns in headless relatives in Old High German}
+ \caption {Relative and demonstrative pronouns in in Old High German \pgcitealt{braune2018}{339}}
   \begin{tabular}{cccc}
   \toprule
-       & \ac{n}.\ac{sg} & \ac{m}.\ac{sg}  & \ac{f}.\ac{sg} \\
+            & \ac{n}.\ac{sg}  & \ac{m}.\ac{sg}      & \ac{f}.\ac{sg}    \\
         \cmidrule{2-4}
-  \ac{nom} & d-aȥ             & d-ër               & d-iu      \\
-  \ac{acc} & d-aȥ             & d-ën               & d-ea/-ia/(-ie) \\
-  \ac{dat} & d-ëmu/-ëmo       & d-ëmu/-ëmo         & d-ëru/-ëro   \\
+  \ac{nom}  & d-aȥ            & \cellcolor{LG}d-ër  & diu               \\
+  \ac{acc}  & d-aȥ            & \cellcolor{LG}d-ën  & d-ea/d-ia          \\
+  \ac{dat}  & d-ëmu/d-ëmo     & d-ëmu/d-ëmo         & d-ëru/d-ëro       \\
   \bottomrule
-         & \ac{n}.\ac{pl} & \ac{m}.\ac{pl}   & \ac{f}.\ac{pl} \\
-          \cmidrule{2-4}
-    \ac{nom}  & d-iu/-ei      &  d-ē/-ea/-ia/-ie & d-eo/-io        \\
-    \ac{acc}  & d-iu/-ei      &  d-ē/-ea/-ia/-ie & d-eo/-io        \\
-    \ac{dat}  & d-ēm/-ēn      &  d-ēm/-ēn        & d-ēm/-ēn        \\
+            & \ac{n}.\ac{pl}  & \ac{m}.\ac{pl}      &  \ac{f}.\ac{pl}  \\
+        \cmidrule{2-4}
+  \ac{nom}  & d-iu            &  d-ē/d-ea/d-ia/d-ie & d-eo/-io         \\
+  \ac{acc}  & d-iu            &  d-ē/d-ea/d-ia/d-ie & d-eo/-io         \\
+  \ac{dat}  & d-ēm/d-ēn       &  d-ēm/d-ēn          & d-ēm/d-ēn        \\
     \bottomrule
   \end{tabular}
 \end{table}
 
-The \tit{d} morpheme corresponds to \tsc{def}. The vowel corresponds to anaphoricity. Do they also not appear in adjectives? Is there any anaphoricity?
+The \tit{d} morpheme corresponds to definiteness and anaphoricity. The suffix corresponds to number, gender and case.
 
-The ending corresponds to number, gender and case: \tsc{ref}, \tsc{class}, \tsc{masc}, \tsc{ind}, \tsc{group} and \tsc{f1}, \tsc{f2}, \tsc{f3}. Illustrate this with nouns and adjectives.
+% Not animate, but masculine. Human or so can be used for personal pronouns? These are more linguistic referents.
+
+The suffixes also appear on adjectives and nouns, showing that these features also appear there (refer to the grammar).
+
+\begin{table}[H]\label{tbl:adj-ohg}
+ \center
+ \caption {Adjectives on \tit{-a-/-ō-} in Old High German \pgcitealt{braune2018}{300}}
+  \begin{tabular}{cccc}
+  \toprule
+            & \ac{n}.\ac{sg}    & \ac{m}.\ac{sg}      & \ac{f}.\ac{sg}    \\
+    \cmidrule{2-4}
+  \ac{nom}  & jung, jung-aȥ     & jung, jung-ēr       & jung, jung-iu     \\
+  \ac{acc}  & jung, jung-aȥ     & jung-an             & jung-a            \\
+  \ac{dat}  & jung-emu/jung-emo & jung-emu/jung-emo   & jung-eru/jung-ero \\
+  \bottomrule
+            & \ac{n}.\ac{pl}    & \ac{m}.\ac{pl}      &  \ac{f}.\ac{pl}   \\
+      \cmidrule{2-4}
+  \ac{nom}  & jung-iu           &  jung-e             & jung-o            \\
+  \ac{acc}  & jung-iu           &  jung-e             & jung-o            \\
+  \ac{dat}  & jung-ēm/jung-ēn   &  jung-ēm/jung-ēn    & jung-ēm/jung-ēn   \\
+    \bottomrule
+  \end{tabular}
+\end{table}
+
+
+I assume the features of the suffix are specifically: referential features, gender features, number features and case features. I adopt.. \tsc{ref}, \tsc{class}, \tsc{masc}, \tsc{ind}, \tsc{group} and \tsc{f1}, \tsc{f2}.
 
 Now I can specify the lexical entries.
 \tsc{masc} thing + cases separately in the lexical entry
-then the \tit{de} morpheme, that corresponds to anaphoricity and uniqueness.
 
+then the \tit{d} morpheme, that corresponds to definiteness.
+
+\ex.
+\begin{forest} boom
+  [\tsc{acc}P
+      [\tsc{f}2]
+      [\tsc{nom}P
+          [\tsc{f}1]
+          [\tsc{ind}P
+              [\tsc{ind}]
+              [\tsc{masc}P
+                  [\tsc{masc}]
+                  [\tsc{class}P
+                      [\tsc{class}]
+                      [\tsc{ref}]
+                  ]
+              ]
+          ]
+      ]
+  ]
+  {\draw (.east) node[right]{⇔ \tit{en}}; }
+\end{forest}
+\label{ex:ohg-en-lexicon}
+
+\ex.
+\begin{forest} boom
+  [\tsc{nom}P
+      [\tsc{f}1]
+      [\tsc{ind}P
+          [\tsc{ind}]
+          [\tsc{masc}P
+              [\tsc{masc}]
+              [\tsc{class}P
+                  [\tsc{class}]
+                  [\tsc{ref}]
+              ]
+          ]
+      ]
+  ]
+  {\draw (.east) node[right]{⇔ \tit{en}}; }
+\end{forest}
+\label{ex:ohg-er-lexicon}
+
+\ex.
+\begin{forest} boom
+  [\tsc{d}P
+      [\tsc{d}]
+      [\tsc{ana}]
+  ]
+  {\draw (.east) node[right]{⇔ \tit{d}}; }
+\end{forest}
+\label{ex:ohg-d-lexicon}
+
+say something about the difference between \tsc{rel} and \tsc{dem}.
+
+
+
+
+%check Pavel's way of talking through first phi, then D, then K.
 
 How can cases and number/gender be packaged together, to the exclusion of D? D is actually merged below K. Let me illustrate this.
 How it came to exist was merging the features one by one. According to the spellout algorithm.
@@ -347,54 +429,60 @@ If the spellout procedure in \ref{ex:spellout} fails, backtracking takes place.
 \ex. \tbf{Backtracking} \citep{starke2018}:\\
 When spellout fails, go back to the previous cycle, and try the next option for that cycle.\label{ex:backtracking}
 
-give relative pronoun here
+
+
 
 \begin{forest} boom
-  [DP
-      [DP
-          [\tit{d}, roof]
+  [\tsc{ana}P
+      [\tsc{ana}P,
+      tikz={
+      \node[label=below:\tit{d},
+      draw,circle,
+      scale=0.80,
+      fit to=tree]{};
+      }
+          [\tsc{ana}]
+          [\tsc{d}]
       ]
-      [\tsc{ana}P, s sep=20mm
-          [\tsc{ana}P
-              [\tit{e}, roof]
-          ]
-          [\tsc{acc}P,
-          tikz={
-          \node[label=below:\tit{n},
-          draw,circle,
-          scale=0.85,
-          fit to=tree]{};
-          }
-              [\tsc{f}2]
-              [\tsc{nom}P
-                  [\tsc{f1}]
-                  [\tsc{ind}P
-                      [\phantom{xxx},
-                      roof, baseline
-                      ]
-                  ]
+      [\tsc{nom}P,
+      tikz={
+      \node[label=below:\tit{er},
+      draw,circle,
+      scale=0.80,
+      fit to=tree]{};
+      }
+          [\tsc{f1}]
+          [\tsc{ind}P
+              [\phantom{xxx},
+              roof, baseline
               ]
           ]
       ]
   ]
 \end{forest}
 
+
 \begin{forest} boom
-  [DP
-      [DP
-          [\tit{d}, roof]
+  [\tsc{ana}P
+      [\tsc{ana}P,
+      tikz={
+      \node[label=below:\tit{d},
+      draw,circle,
+      scale=0.80,
+      fit to=tree]{};
+      }
+          [\tsc{ana}]
+          [\tsc{d}]
       ]
-      [\tsc{ana}P, s sep=20mm
-          [\tsc{ana}P
-              [\tit{e}, roof]
-          ]
-          [\tsc{nom}P,
-          tikz={
-          \node[label=below:\tit{r},
-          draw,circle,
-          scale=0.85,
-          fit to=tree]{};
-          }
+      [\tsc{acc}P,
+      tikz={
+      \node[label=below:\tit{en},
+      draw,circle,
+      scale=0.85,
+      fit to=tree]{};
+      }
+          [\tsc{f}2]
+          [\tsc{nom}P
               [\tsc{f1}]
               [\tsc{ind}P
                   [\phantom{xxx},
@@ -406,21 +494,128 @@ give relative pronoun here
   ]
 \end{forest}
 
+So, there is a base part and a case part. Actually, the case part also has some case in it, but that does not matter because they are identical in both case parts.
 
-\subsection{External element}
+I start with the first example from Table \ref{tbl:forms-ohg}, in which the internal and external case match (\tsc{int} = \tsc{ext}). The example that corresponds to this example is given in \ref{ex:ohg-nom-nom-rep}.
+
+\exg. quham dher chisendit scolda uuerdhan\\
+ come.\ac{pst}.3\ac{sg}\scsub{[nom]} \ac{rel}.\ac{sg}.\ac{m}.\ac{nom} send.\ac{pst}.\ac{ptcp}\scsub{[nom]} should.\ac{pst}.3\ac{sg} become.\ac{inf}\\
+ `the one, who should have been sent, came' \flushfill{Old High German, \ac{isid} 35:5}\label{ex:ohg-nom-nom-rep}
+
+ \begin{table}[H]
+   \center
+  \caption {Old High German: \ac{int} = \ac{ext}}
+   \begin{tabular}[b]{cc}
+       \toprule
+       \ac{int}  &   \ac{ext} \\ \cmidrule{1-2}
+       \footnotesize{
+       \begin{forest} boom
+         [DP
+             [DP,
+               tikz={
+               \node[draw,circle,
+               fill=DG,fill opacity=0.2,
+               scale=0.75,
+               DG,dashed,
+               fit to=tree]{};
+               }
+                 [\tit{d}, roof]
+             ]
+             [\tsc{ana}P, s sep=20mm
+                 [\tsc{ana}P,
+                 tikz={
+                 \node[draw,circle,
+                 fill=DG,fill opacity=0.2,
+                 scale=0.75,
+                 DG,dashed,
+                 fit to=tree]{};
+                 }
+                     [\tit{e}, roof]
+                 ]
+                 [\tsc{nom}P,
+                 tikz={
+                 \node[label=below:\tit{er},
+                 draw,circle,
+                 scale=0.85,
+                 fit to=tree]{};
+                 \node[draw,circle,
+                 fill=DG,fill opacity=0.2,
+                 DG,dashed,
+                 scale=0.8,
+                 fit to=tree]{};
+                 }
+                     [\tsc{f1}]
+                     [\tsc{ind}P
+                         [\phantom{xxx},
+                         roof, baseline
+                         ]
+                     ]
+                 ]
+             ]
+         ]
+       \end{forest}
+       }
+       &
+       \footnotesize{
+       \begin{forest} boom
+         [\textcolor{DG}{DP}
+             [\textcolor{DG}{DP},edge=DG,
+             tikz={
+             \node[draw,circle,
+             scale=0.75,
+             DG,dashed,
+             fit to=tree]{};
+             }
+                 [\textcolor{DG}{\tit{d}}, roof, edge=DG]
+             ]
+             [\textcolor{DG}{\tsc{ana}P},edge=DG, s sep=20mm
+                 [\textcolor{DG}{\tsc{ana}P},edge=DG,
+                 tikz={
+                 \node[draw,circle,
+                 scale=0.75,
+                 DG,dashed,
+                 fit to=tree]{};
+                 }
+                     [\textcolor{DG}{\tit{e}}, roof, edge=DG]
+                 ]
+                 [\textcolor{DG}{\ac{nom}},edge=DG,
+                 tikz={
+                 \node[label=below:\textcolor{DG}{\tit{r}},
+                 draw,circle,
+                 scale=0.75,
+                 DG,
+                 fit to=tree]{};
+                 \node[
+                 draw,circle,
+                 scale=0.8,
+                 dashed,DG,
+                 fit to=tree]{};
+                 }
+                     [\textcolor{DG}{\tsc{f1}},baseline,edge=DG]
+                     [\textcolor{DG}{\tsc{ind}P},edge=DG
+                         [\phantom{xxx},
+                         roof, baseline, edge=DG
+                         ]
+                     ]
+                 ]
+             ]
+         ]
+       \end{forest}
+       }\\
+       \bottomrule
+   \end{tabular}
+   \label{tbl:ohg-int-wins}
+ \end{table}
+
+There are two independent containment relations. Problem?
 
 
-I am not going to give a whole sentence. I only talk about the internal and external element in there. I also do not talk about the nature of the deletion process.
-
-I copy the \tsc{ind}P, and then I merge the external \tsc{ana}, \tsc{d} and cases.
-
-\subsubsection{Comparison}
 
 \exg. Thíz ist \tbf{then} \tbf{sie} \tbf{zéllent}\\
 \ac{dem}.\ac{sg}.\ac{n}.\ac{nom} be.\ac{pres}.3\ac{sg}\scsub{[nom]} \ac{rel}.\ac{sg}.\ac{m}.\ac{acc} 3\ac{pl}.\ac{m}.\ac{nom} tell.\ac{pres}.3\ac{pl}\scsub{[acc]}\\
 `this is the one whom they talk about' \flushfill{Old High German, \ac{otfrid} III 16:50}\label{ex:ohg-nom-acc-rep}
 
-There are three independent containment relations. Problem?
+
 
 \begin{table}[H]
   \center
@@ -645,6 +840,54 @@ There are three independent containment relations. Problem?
   \label{tbl:ohg-ext-wins}
 \end{table}
 
+
+
+I am not going to give a whole sentence. I only talk about the internal and external element in there.
+
+The focus of this dissertation is on what the internal and the external element look like for them to be able to surface, and not on the exact structural configuration in which this happens. I do not commit to any analysis here, but to make things concrete, I could see this working in Cinque's story.
+
+He says that there are always two heads in languages. The internal element c-commands the external element, because it is in the specifier of the specifier (Kayne).
+
+\ex.
+\begin{forest} boom
+[
+   [CP
+       [\tsc{int}
+          [\phantom{xxx}, roof]
+       ]
+       [CP
+           [\phantom{xxx}, roof]
+       ]
+   ]
+   [\tsc{ext}
+      [\phantom{xxx}, roof]
+   ]
+]
+\end{forest}
+
+When things become definite, the \tsc{ext} from below there is moved over the relative clause.
+
+\ex.
+\begin{forest} boom
+[
+    [\tsc{ext}
+       [\phantom{xxx}, roof]
+    ]
+    [
+       [CP
+           [\tsc{int}
+              [\phantom{xxx}, roof]
+           ]
+           [CP
+               [\phantom{xxx}, roof]
+           ]
+       ]
+       [\tit{t\scsub{ext}}]
+    ]
+]
+\end{forest}
+
+What remains unclear is what the trigger is for the movement of the external element over relative clause is.
 
 
 \section{Deriving only internal}\label{sec:deriving-only-internal}
@@ -1083,7 +1326,7 @@ Florian showed that this is different for Modern German:
 \toprule
        & anaphoric                & situational uniqueness              & inherent uniqueness                 \\
        \cmidrule{2-4}
-Polish & \cellcolor{DG}\tsc{dem}  & \cellcolor{DG}\tsc{dem}             & ∅                                   \\
+Polish & \tsc{dem}  & \cellcolor{DG}\tsc{dem}             & ∅                                   \\
 German & \tsc{dem}\scsub{strong}  & \cellcolor{LG}\tsc{dem}\scsub{weak} & \cellcolor{LG}\tsc{dem}\scsub{weak} \\
 \bottomrule
 \end{tabular}
