--- a/fenna-files/references.bib
+++ b/fenna-files/references.bib
@@ -653,3 +653,20 @@
   publisher={Walter de Gruyter GmbH \& Co KG},
   doi={10.1515/9783110515114}
 }
+
+@article{fuss2014,
+  title={Freie Relativsätze mit d-Pronomen},
+  author={Fuß, Eric and Grewendorf, Günther},
+  year={2014}
+}
+
+@article{hanink2018,
+  title={Super light-headed relatives, missing prepositions, and span-conditioned allomorphy in German},
+  author={Hanink, Emily A},
+  journal={The Journal of Comparative Germanic Linguistics},
+  volume={21},
+  number={2},
+  pages={247--290},
+  year={2018},
+  publisher={Springer}
+}
