ohg nog maar weer een versie

--- a/fenna-files/references.bib
+++ b/fenna-files/references.bib
@@ -670,3 +670,16 @@
   year={2018},
   publisher={Springer}
 }
+
+@article{fuss2017,
+  title={Wh-relatives in German: historical and current developments},
+  author={Fuß, Eric}
+}
+
+@article{harley2002,
+  title={Person and number in pronouns: A feature-geometric analysis},
+  author={Harley, Heidi and Ritter, Elizabeth},
+  journal={Language},
+  pages={482--526},
+  year={2002},
+}
