rearranged it all

--- a/discussion.tex
+++ b/discussion.tex
@@ -2,29 +2,6 @@
 
 \chapter{Discussion}\label{ch:discussion}
 
-\section{Optionality}
-
-The deletion in Old High German is optional. You can also have two light heads.
-
-\exg. Innan dhiu dher quhimit, dher chisendit uuirdhit\\
-bis dass der.MASC.SG.NOM kommen.IND.PRES.SG.3  der.MASC.SG.NOM senden,schicken werden.IND.PRES.SG.3\\
-`' \flushfill{Old High German, \ac{isid}}
-
-
-
-The deletion in Modern German is not optional, but obligatory. The reason for that is that the weak demonstrative is phonologically(?) not heavy enough to be the head of a relative clause. Maybe not only phonologically, because \tit{vom} also does not work..
-
-are free relatives restrictive or non-restrictive? > restrictive, and restrictive and weak are incompatible :)  >> this is why we have deletion!
-
-\ex. Sie ist vom Mann, mit dem sie gestern ausgegangen ist, versetzt worden.
-
-
-Polish only allows the deletion of the light head in the matching situation. It is not obligatory there, you can just as well have a light-headed relative. The deletion is possible, because you have two elements that are pretty similar?
-
-\exg. Jan czyta to, co Maria czyta.\\
- Jan read this what Maria reads\\
- `Jan reads what Maria reads.' \flushfill{Polish, \pgcitealt{citko2004}{96}}
-
 
 \section{Diachronic part}
 
@@ -39,19 +16,29 @@ Wouldn't we now not expect that Modern German patterns with Old High German wrt 
 
 First there was only the relative pronoun with a D. Then we did case competition with this one, in both directions. Later, we only did it with the wh, and we only had internal left. Because this competitor was introduced, the case competition with D disappeared.
 
-Eric Fuß with definite readings of d-relatives etc.
 
-\section{Why \tsc{fem} does not have \tsc{wh}-pronouns}
+\section{Suppletive nominatives in Gothic}
 
 
-Another language that only allows the internal case to surface after it wins the case competition.
+
+
+\section{Towards deriving the always-external pattern}
+
+grosu: morphological distinctions correlate with `freedom'
+
+Why \tsc{fem} does not have \tsc{wh}-pronouns?
+
+
+
+
+
+\section{More languages}
 
 \tit{valita} `choose' takes a partitive object
 
 \ex. Valitsen mista sina piddt.
 choose-I.el what-el you like-you.part
 'I choose what you like.'
-
 
 \tit{pitää} `like' takes elative objects
 
@@ -63,5 +50,4 @@ like-I.part what-el you choose-you.el\\
 like-I.part what-el you choose-you.el\\
 `I like what you choose.'
 
-
-x
+\phantom{x}
