--- a/fenna-files/references.bib
+++ b/fenna-files/references.bib
@@ -683,3 +683,10 @@
   pages={482--526},
   year={2002},
 }
+
+@book{grosu1994,
+  title={Three studies in locality and case},
+  author={Grosu, Alexander},
+  year={2003},
+  publisher={Routledge}
+}
