--- a/thesis.tex
+++ b/thesis.tex
@@ -74,11 +74,11 @@ thanks
 \include{introduction}
 
 \part{The case}\label{part:case-facts}
-\include{recurring-pattern}
-\include{case-decomposition}
+% \include{recurring-pattern}
+% \include{case-decomposition}
 
 \part{The base}\label{part:variation}
-\include{case-competition-typology}
+% \include{case-competition-typology}
 \include{committee}
 
 \bookmarksetup{startatroot}
